# HY-Embodied-0.5-X

./: .gitignore  INSTALL.md  LICENSE  README.md  README_zn.md  inference.py  pyproject.toml  requirements.txt  setup_env.sh
configs/accelerate/: sft_1node_8gpu.yaml  sft_1node_8gpu_fsdp.yaml  sft_1node_8gpu_zero2.yaml  sft_4node_8gpu.yaml  sft_4node_8gpu_fsdp.yaml  sft_4node_8gpu_zero2.yaml
configs/deepspeed/: zero2.json
configs/fsdp/: full_shard_auto_wrap.yaml
configs/sft/: example_small.yaml  example_small_single_gpu.yaml
data_examples/: README.md  data_demo.jsonl
docs/: architecture.md  data_format.md  inference.md  training.md
scripts/: run_server.sh  run_sft_1node_8gpu.sh  run_sft_4node_8gpu.sh  run_sft_single_gpu.sh
scripts/internal/: README.md  build_data_demo.py
src/hy_embodied/: __init__.py
src/hy_embodied/cli/: infer.py  server.py  train.py
src/hy_embodied/inference/: __init__.py  pipeline.py
src/hy_embodied/training/: __init__.py  callbacks.py  chat_template.py  config.py  data.py  trainer.py
